--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,28 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.customNotification {
+	border-radius: 10px;
+	box-shadow: 0px 4px 21px rgba(0, 0, 0, 0.05);
+}
+.customNotification .ant-notification-notice-message {
+	color: #555555;
+	font-weight: 600;
+	font-size: 16px;
+	margin-left: 36px;
+}
+.customNotification .ant-notification-notice-icon {
+	margin-left: 0;
+}
+.customNotification .ant-notification-notice-icon svg {
+	width: 20px;
+	height: 20px;
+}
+.customNotification .ant-notification-notice-description {
+	font-weight: 400;
+	font-size: 14px;
+	color: #000;
+	margin-left: 0;
+	margin-top: 10px;
+}
